7.3.6: trying to fix nav formatting overflow while also fixing nav link text

--- a/css/navigation_formatting.css
+++ b/css/navigation_formatting.css
@@ -5,14 +5,18 @@ ul.nav-list {
     background-color: #0f0f0f;
 }
 
-li a.nav-element {
+li.nav-list-element {
     display: block;
     width: 60px;
-    text-decoration: none;
-    color: whitesmoke;
 }
 
-li a.nav-element:hover {
+a.nav-list-element-link {
+    text-decoration: none;
+    text-align: center;
+    color: #7373ff;
+}
+
+a.nav-list-element-link:hover {
     background-color: #7373ff;
     color: black;
     text-decoration: none;
